force-app/main/default/objects/DA_CaseMilestone__b/DA_CaseMilestone__b.object-meta.xml
<CustomObject>
    <label>DA Case Milestone</label>
    <pluralLabel>DA Case Milestone</pluralLabel>
</CustomObject>