force-app/main/default/objects/DA_CaseMilestone__b/fields/S_LastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>S_LastModifiedDate__c</fullName>
    <label>Last Modified Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>