force-app/main/default/objects/DA_CaseMilestone__b/fields/S_MilestoneTypeId__c.field-meta.xml
<CustomField>
    <fullName>S_MilestoneTypeId__c</fullName>
    <label>Milestone Type ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>