force-app/main/default/objects/DA_CaseMilestone__b/fields/S_TimeRemainingInHrs__c.field-meta.xml
<CustomField>
    <fullName>S_TimeRemainingInHrs__c</fullName>
    <label>Time Remaining (Hour:Min)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>