force-app/main/default/objects/DA_CaseMilestone__b/fields/S_TimeSinceTargetInHrs__c.field-meta.xml
<CustomField>
    <fullName>S_TimeSinceTargetInHrs__c</fullName>
    <label>Time Since Target (Hour:Min)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>